@@ -1,5 +1,15 @@
 2006-03-07  Danilo Šegan  <danilo@gnome.org>
 
+	* update-stats.py (LocStatistics.update_stats_database): Added
+	(works with both generic databases and archives).
+	(LocStatistics.ui_l10n_stats): Switch to update_stats_database.
+	(LocStatistics.doc_l10n_stats): Switch to update_stats_database.
+
+	* database.py (__connection__): Add "ArchivedInformation" and
+	"ArchivedStatistics" tables.
+
+2006-03-07  Danilo Šegan  <danilo@gnome.org>
+
 	* view-module.py (get_stats_for): Set "updated" field for POT file.
 
 	* templates/show-stats.tmpl: Show last update of POT file.
